--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="witdh=device-width, initial-scale=1.0">
     <title>TodoApp</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
@@ -11,6 +12,14 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "layouts/header" %>
+    <%= render "layouts/flash" %>
+    <div id="modelArea"></div>
+    <main>
+      <div class="container-fruid h-100 p-2 d-flex flex-column">
+        <%= yield %>
+      </div>
+    </main>
+    <%= render "layouts/footer" %>
   </body>
 </html>
