--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,5 +16,10 @@
 
  @import "bootstrap";
  @import "layouts";
+
  @import"forms";
  @import"devise";
+
+ @import "scaffolds";
+ @import "goals";
+ @import url("https://use.fontawesome.com/releases/v5.8.2/css/all.css");
