--- a/app/views/goals/new.js.erb
+++ b/app/views/goals/new.js.erb
@@ -1,7 +1,11 @@
+<%# $(document).ready(function() {
+    $("p").text("成功！！");
+  }); %>
+
 $("#modalArea").html("<%= j(render 'form', goal: @goal) %>")
 
 $("#modalArea").find(".modal").on('shown.bs.modal', () => {
     $("#modalArea").find("form input[type=text]")[0].focus();
 })
 
-$("#modalArea").find(".modal").show()
+$("#modalArea").find(".modal").modal('show')
